--- a/Omkar_Watkinson_User_Manual.html
+++ b/Omkar_Watkinson_User_Manual.html
@@ -51,12 +51,12 @@
             </section>
             <section class="para">
               <h2>How To Help Me</h2>
-              <p>If you are explaining something that I do not know, I would like you to do it in a clear way, even in laymans terms, because if I dont get it, the information will probably go through my head and I simply wont remember what you meant.
+              <p>If you are explaining something that I do not know, I would like you to do it in a clear way, even in laymans terms, because if I dont get it, the information will probably go through my head and I simply won't remember what you meant.
             </p>
             </section>
             <section class="para">
               <h2>What People Misunderstand About Me</h2>
-              <p>I havent got any misunderstandings from any of my friends, family or people yet.
+              <p>I haven't got any misunderstandings from any of my friends, family or people yet.
             </p>
             </section>
 
